# robots-configuration

iRonCub-Mk3/: CMakeLists.txt  general.xml  iRonCub_wbd.xml  iRonCub_wbd_no-jetpack.xml  iRonCub_wbd_no-jetpack_no-torso-hip-pitch-roll.xml  iRonCub_wbd_no-jetpack_no-torso-pitch-roll.xml  iRonCub_wbd_no-torso-pitch-roll.xml  icub_wbd.xml  launch-wholebodydynamics-external.xml  yarprobotinterface.ini
iRonCub-Mk3/calibrators/: left_arm-calib-iRonCub.xml  left_arm-calib.xml  left_leg-calib.xml  left_leg-calib_yaw-only.xml  right_arm-calib-iRonCub.xml  right_arm-calib.xml  right_leg-calib.xml  right_leg-calib_yaw-only.xml  torso-calib.xml  torso-calib_yaw-only.xml
iRonCub-Mk3/estimators/: wholebodydynamics-external.xml  wholebodydynamics.xml  wholebodydynamics_no-jetpack.xml
iRonCub-Mk3/estimators/ft_secondary_calibration_models/: 3rd_order_dummy.xml
iRonCub-Mk3/extra/applications/: iRonCubStartup.xml
iRonCub-Mk3/extra/scripts/: additionalCommands.sh  twoFeetStandingCalib.sh  twoFeetStandingIdle.sh
iRonCub-Mk3/hardware/FT/: left_arm-eb1-j0_1-strain.xml  left_arm_jetpack-eb1-j0_1-strain.xml  left_jetpack-eb1-j0_1-strain.xml  left_leg-eb7-j0_2-strain.xml  left_leg-eb8-j3_5-strain.xml  right_arm-eb3-j0_1-strain.xml  right_arm_jetpack-eb3-j0_1-strain.xml  right_jetpack-eb3-j0_1-strain.xml  right_leg-eb11-j0_2-strain.xml  right_leg-eb12-j3_5-strain.xml
iRonCub-Mk3/hardware/battery/: battery_bat.xml
iRonCub-Mk3/hardware/electronics/: face-eb22-j0_1-eln.xml  left_arm-eb1-j0_1-eln.xml  left_arm-eb2-j2_3-eln.xml  left_leg-eb7-j0_2-eln.xml  left_leg-eb8-j3_5-eln.xml  pc104.xml  right_arm-eb3-j0_1-eln.xml  (+4 more)
(+615 files in other folders)
